[package]
name = "sunrustforce"
version = "0.1.0"
authors = ["RustDot <rust.coach@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustforce = "0.1.4"
serde = "1.0.118"
tokio = { version = "0.3.5", features = ["full"] }
rpassword = "5.0.0"